app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;



:root {
  --foreground-rgb: 0, 0, 0;
  --background-start-rgb: 214, 219, 220;
  --background-end-rgb: 255, 255, 255;
  --primary-green: #65B427;
}

@media (prefers-color-scheme: dark) {
  :root {
    --foreground-rgb: 255, 255, 255;
    --background-start-rgb: 0, 0, 0;
    --background-end-rgb: 0, 0, 0;
  }
}

body {
  color: rgb(var(--foreground-rgb));
  background: linear-gradient(
      to bottom,
      transparent,
      rgb(var(--background-end-rgb))
    )
    rgb(var(--background-start-rgb));
}

.key {
  padding: 10px;
  margin: 2px;
  background: #E5E7EB;
  display: inline-block;
  text-align: center;
  border-radius: 4px;
  min-width: 20px;
  user-select: none;
}
.keyboard {
  max-width: 500px; 
}

.centered-thing {
  position: absolute;
  top: 50%;
  left: 50%;
  margin-right: -50%;
  transform: translate(-50%, -50%)
}


.cropper-crop-box,
.cropper-view-box {
  border-radius: 50%;
}

.cropper-view-box {
  box-shadow: 0 0 0 1px #39f;
  outline: none; /* because border-radius doesn’t affect outline */
}

